# ai-code-reviewer

./: .ai-reviewer.yaml  .dockerignore  .gitignore  DESIGN.md  Dockerfile  Makefile  README.md  REVIEW_FINDINGS.md  cloudbuild.yaml  config.example.yaml  deploy-gcp.sh  pyproject.toml  setup-ci.md
.ai/: README.md  context.md  doc-bot.md
.ai/prompts/: codebase-overview.md  review-documentation.md
.ai/rules/: README.md  agents.md  architecture.md  conventions.md  github.md  models.md  orchestrator.md
.github/scripts/: doc_analysis.py
.github/workflows/: ai-review.yaml  ci.yaml  doc-bot.yml  doc-update.yaml
docs/: ARCHITECTURE.md  CHANGELOG-AND-NEXT.md  IMPROVEMENT-PLAN.md  REVIEW-STANDARD-ENHANCEMENTS.md
docs/migrations/: 2026-04-anthropic-quality-regression.md
docs/superpowers/plans/: 2026-03-26-improvement-plan-phase2.md  2026-04-16-anthropic-messages-migration.md
docs/superpowers/specs/: 2026-04-15-anthropic-messages-migration-design.md
src/ai_reviewer/: __init__.py  cli.py  config.py  review.py  session.py
src/ai_reviewer/agents/: __init__.py  anthropic_client.py  base.py  cursor_client.py  patterns.py  performance.py  security.py
src/ai_reviewer/context/: __init__.py  builder.py  fetch.py  neighbors.py
src/ai_reviewer/docs/: __init__.py  analyzer.py  updater.py
src/ai_reviewer/github/: __init__.py  client.py  formatter.py  webhook.py
src/ai_reviewer/models/: __init__.py  context.py  findings.py  review.py
src/ai_reviewer/orchestrator/: __init__.py  aggregator.py  orchestrator.py
src/ai_reviewer/security/: __init__.py  scanner.py
src/ai_reviewer/tools/: __init__.py  repo_tools.py
tests/: __init__.py  conftest.py  test_agents.py  test_aggregator.py  test_anthropic_client.py  test_base_agent.py  test_cli.py  test_config.py  test_context_builder.py  test_context_fetch.py  test_convergence.py  test_doc_analyzer.py  test_github.py  test_models.py  test_neighbors.py  test_orchestrator.py  test_prompts.py  test_repo_tools.py  test_review.py  test_scoring.py  test_security_scanner.py  test_session.py
tests/fixtures/sample_diffs/: security_issue.patch
tests/integration/: __init__.py  test_e2e_review.py
